kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
  labels:
    app: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
